<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/qty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/qty"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textSize="11sp"
       
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Food"
        app:layout_constraintStart_toEndOf="@id/qty"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textSize="11sp"
       
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Calories"
        app:layout_constraintStart_toEndOf="@+id/Unit" />

    <TextView
        android:id="@+id/Calories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/calories"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textSize="11sp"
       
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Weight"
        app:layout_constraintStart_toEndOf="@+id/Food"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textSize="11sp"
       
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Calories"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>