<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".presentation.ui.fragments.function1.Function1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/nutrition_analysis_api_ndemo"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/enter_an_ingredient"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="1dp"
            app:hintEnabled="false"
            app:layout_constraintDimensionRatio="H,1:0.8"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editIngredient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.146">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAnalyze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:enabled="false"
                android:paddingBottom="10dp"
                android:text="@string/disable"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNewRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:minWidth="60dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/new_recipe"
                android:textAllCaps="false"
                android:textSize="25sp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>